[gd_scene load_steps=9 format=3 uid="uid://dthdejp3bcutg"]

[ext_resource type="Texture2D" uid="uid://dgijtd7skqj3o" path="res://textures/explosive_Barrel.png" id="1_28lqi"]
[ext_resource type="Script" uid="uid://dhsk35ytw8smi" path="res://props/Explosive_Barrel/explosive_barrel.gd" id="1_oolf8"]
[ext_resource type="Texture2D" uid="uid://brplfrqlt75hs" path="res://textures/Barrel_Explosion.png" id="3_jrt2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28lqi"]
size = Vector2(10, 16)

[sub_resource type="Animation" id="Animation_jrt2c"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.3, 0.46666667, 0.6333333, 0.76666665, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_vxyyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1osvg"]
_data = {
&"RESET": SubResource("Animation_vxyyq"),
&"explosion": SubResource("Animation_jrt2c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jrt2c"]
radius = 43.0

[node name="Explosive_Barrel" type="Area2D" groups=["enemy", "enemy_barrel"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_oolf8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_28lqi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_28lqi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1osvg")
}

[node name="explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_jrt2c")
hframes = 7

[node name="damage_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_Area"]
shape = SubResource("CircleShape2D_jrt2c")

[node name="Explosion_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Explosion_Timer" to="." method="_on_explosion_timer_timeout"]
